# LeeFRAG

./: .gitignore  CLAUDE.md  KNOWN_ISSUES.md  absorber_eval.py  absorber_train.py  baseline.py  block_attention.py  collator.py  config.py  dataset.py  eval.py  eval_prompt_test.py  inspect_gates.py  kv_cache_utils.py  pyproject.toml  qformer.py  reconstruction_collator.py  reconstruction_trainer.py  requirements.txt  scheduler.py  scratch.txt  test.py  todo.md  train.py  train_reconstruction.py  trainer.py
autoresearch/: CLAUDE.md  base.tsv  ideas.md  results.tsv
autoresearch/.claude/: settings.json
data/: context.json
docs/: todo.md
leefrag/: config.py
leefrag/data/: dataset.py  npt_collator.py
leefrag/evaluation/: absorber_eval.py  baseline.py  eval.py  eval_prompt_test.py
leefrag/model/: qformer.py
leefrag/training/: absorber_trainer.py  npt_trainer.py  reconstruction_trainer.py  scheduler.py  trainer.py
leefrag/utils/: kv_cache_utils.py
scripts/: absorber_train.py  eval_baseline.py  train.py  train_npt.py  train_npt_timed.py  train_reconstruction.py
slurms/: a100.slurm  h100.slurm  run_a100_experiments.sh
